Worked on file loading and checking if file contains correct key/iv values.

--- a/vmve/vmve.vcxproj
+++ b/vmve/vmve.vcxproj
@@ -112,7 +112,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)engine\include\;$(SolutionDir)$(ProjectName)\src\;$(SolutionDir)$(ProjectName)\vendor\imgui\;$(SolutionDir)$(ProjectName)\vendor\cryptopp\include\;$(SolutionDir)$(ProjectName)\vendor\cereal\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -133,7 +133,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)engine\include\;$(SolutionDir)$(ProjectName)\src\;$(SolutionDir)$(ProjectName)\vendor\imgui\;$(SolutionDir)$(ProjectName)\vendor\cryptopp\include\;$(SolutionDir)$(ProjectName)\vendor\cereal\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>Use</PrecompiledHeader>
